--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -8,6 +8,26 @@
     background: #34C759;
 }
 
+/* Toast */
+.toast-update, .toast-tambah, .toast-hapus{
+    background: #007AFF;
+    padding: 20px;
+    text-align: center;
+    width: max-content;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #007AFF;
+}
+.toast-tambah{
+    background: #34C759;
+}
+.toast-hapus{
+    background: #FF3B30;
+}
+
 
 /* Sidebar */
 .theme-sidebar{
@@ -51,5 +71,9 @@
 /* Theme container */
 .theme-title{
     font-size: 40px;
+    font-weight: bold;
+}
+.theme-auth-title{
+    font-size: 80px;
     font-weight: bold;
 }
